<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_purple_r20"
    android:orientation="vertical"
    android:padding="@dimen/_20sdp">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_title_dialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/sen_bold"
        android:gravity="center"
        android:text="@string/save_record"
        android:textColor="@color/white"
        android:textSize="24sp" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_message_dialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/sen_medium"
        android:gravity="center"
        android:text="@string/message_save_record"
        android:textColor="@color/text_B6B6B6"
        android:textSize="16sp" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edt_input_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:fontFamily="@font/sen_medium"
        android:hint="@string/file_name"
        android:maxLines="1"
        android:textColor="@color/white"
        android:textColorHint="@color/text_B6B6B6"
        android:textSize="16sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_cancel"
            android:layout_width="0dp"
            android:layout_height="@dimen/_45sdp"
            android:layout_marginEnd="@dimen/_7sdp"
            android:layout_weight="1"
            android:background="@drawable/bg_purple_r20"
            android:fontFamily="@font/sen_medium"
            android:text="@string/cancel"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_accept"
            android:layout_width="0dp"
            android:layout_height="@dimen/_45sdp"
            android:layout_marginStart="@dimen/_7sdp"
            android:layout_weight="1"
            android:background="@drawable/bg_button_deep_purple"
            android:fontFamily="@font/sen_medium"
            android:text="@string/save"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="18sp" />
    </LinearLayout>

</LinearLayout>