<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activities.SettingActivity">

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/btn_back"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/_50sdp"
        android:background="@drawable/bg_ripple_none_r20"
        android:contentDescription="@string/back"
        android:padding="@dimen/_10sdp"
        android:src="@drawable/ic_arrow_left"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_title"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_50sdp"
        android:fontFamily="@font/sen_bold"
        android:gravity="center"
        android:text="@string/settings"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_title">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingHorizontal="@dimen/_12sdp">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/sen_medium"
                android:text="@string/general"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/btn_language"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_13sdp"
                android:background="@drawable/bg_white_rec"
                android:clickable="true"
                android:focusable="true"
                android:paddingHorizontal="@dimen/_12sdp"
                android:paddingVertical="@dimen/_8sdp">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/settings_language"
                    android:drawablePadding="@dimen/_8sdp"
                    android:fontFamily="@font/sen_medium"
                    android:gravity="center_vertical"
                    android:text="@string/language"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_language_selected"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableEnd="@drawable/ic_arrow_right"
                    android:fontFamily="@font/sen_regular"
                    android:gravity="center_vertical"
                    android:text="@string/language"
                    android:textColor="#BDBBBE"
                    android:textSize="12sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/btn_mail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_8sdp"
                android:background="@drawable/bg_white_rec"
                android:clickable="true"
                android:drawableStart="@drawable/settings_mail"
                android:drawablePadding="@dimen/_8sdp"
                android:focusable="true"
                android:fontFamily="@font/sen_medium"
                android:gravity="center_vertical"
                android:paddingHorizontal="@dimen/_12sdp"
                android:paddingVertical="@dimen/_8sdp"
                android:text="@string/mail"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:visibility="gone" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/btn_share_app"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_8sdp"
                android:background="@drawable/bg_white_rec"
                android:clickable="true"
                android:drawableStart="@drawable/settings_share"
                android:drawablePadding="@dimen/_8sdp"
                android:focusable="true"
                android:fontFamily="@font/sen_medium"
                android:gravity="center_vertical"
                android:paddingHorizontal="@dimen/_12sdp"
                android:paddingVertical="@dimen/_8sdp"
                android:text="@string/share_this_app"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/btn_feedback"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_8sdp"
                android:background="@drawable/bg_white_rec"
                android:clickable="true"
                android:drawableStart="@drawable/settings_feedback"
                android:drawablePadding="@dimen/_8sdp"
                android:focusable="true"
                android:fontFamily="@font/sen_medium"
                android:gravity="center_vertical"
                android:paddingHorizontal="@dimen/_12sdp"
                android:paddingVertical="@dimen/_8sdp"
                android:text="@string/feedback"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:visibility="gone" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/btn_privacy"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_8sdp"
                android:background="@drawable/bg_white_rec"
                android:clickable="true"
                android:drawableStart="@drawable/settings_privacy"
                android:drawablePadding="@dimen/_8sdp"
                android:focusable="true"
                android:fontFamily="@font/sen_medium"
                android:gravity="center_vertical"
                android:paddingHorizontal="@dimen/_12sdp"
                android:paddingVertical="@dimen/_8sdp"
                android:text="@string/privacy_policy"
                android:textColor="@color/black"
                android:textSize="14sp" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>