<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activities.language.LanguageActivity">

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/btn_back"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/_50sdp"
        android:background="@drawable/bg_ripple_none_r20"
        android:contentDescription="@string/back"
        android:padding="@dimen/_10sdp"
        android:src="@drawable/ic_arrow_left"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_title"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_50sdp"
        android:fontFamily="@font/sen_bold"
        android:gravity="center"
        android:text="@string/language"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/btn_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/_12sdp"
        android:background="@drawable/bg_purple_r10"
        android:clickable="true"
        android:focusable="true"
        android:fontFamily="@font/sen_medium"
        android:paddingHorizontal="@dimen/_16sdp"
        android:paddingVertical="@dimen/_7sdp"
        android:text="@string/save"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@id/tv_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/tv_title" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_list_language"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="@dimen/_10sdp"
        android:layout_marginBottom="@dimen/_5sdp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_title" />

</androidx.constraintlayout.widget.ConstraintLayout>