<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_favourite"
    tools:context=".ui.activities.WelcomeActivity">

    <com.google.android.material.imageview.ShapeableImageView
        android:layout_width="@dimen/_130sdp"
        android:layout_height="@dimen/_130sdp"
        android:layout_marginTop="@dimen/_70sdp"
        android:adjustViewBounds="true"
        android:src="@mipmap/piano_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:shapeAppearanceOverlay="@style/rounded_corner_r30" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_135sdp"
        android:orientation="vertical"
        android:paddingHorizontal="@dimen/_30sdp"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/sen_bold"
            android:gravity="center"
            android:text="@string/welcome_to"
            android:textColor="@color/black"
            android:textSize="24sp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/sen_bold"
            android:gravity="center"
            android:text="@string/app_name"
            android:textColor="@color/black"
            android:textSize="24sp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/btn_get_started"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15sdp"
            android:background="@drawable/bg_button_deep_purple"
            android:clickable="true"
            android:focusable="true"
            android:fontFamily="@font/sen_bold"
            android:gravity="center"
            android:paddingVertical="@dimen/_12sdp"
            android:text="@string/get_started"
            android:textColor="@color/white"
            android:textSize="22sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/_20sdp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>