<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activities.PlayListActivity">

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/btn_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_ripple_none_r20"
        android:contentDescription="@string/back"
        android:padding="@dimen/_10sdp"
        android:src="@drawable/ic_arrow_left"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:baselineAligned="false"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_back">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/btn_music_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_10sdp"
                android:background="@drawable/bg_purple_r10"
                android:clickable="true"
                android:drawableTop="@drawable/ic_music_list_select"
                android:drawablePadding="@dimen/_4sdp"
                android:focusable="true"
                android:fontFamily="@font/sen_medium"
                android:gravity="center"
                android:paddingVertical="@dimen/_8sdp"
                android:text="@string/music_list"
                android:textColor="@color/white"
                android:textSize="13sp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/btn_record_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="@drawable/bg_lavender_r10"
                android:clickable="true"
                android:drawableTop="@drawable/ic_record_list_un_select"
                android:drawablePadding="@dimen/_4sdp"
                android:focusable="true"
                android:fontFamily="@font/sen_medium"
                android:gravity="center"
                android:paddingVertical="@dimen/_8sdp"
                android:text="@string/record_list"
                android:textColor="@color/color_purple"
                android:textSize="13sp" />

        </LinearLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3">

            <View
                android:layout_width="3dp"
                android:layout_height="match_parent"
                android:layout_marginBottom="@dimen/_50sdp"
                android:background="@drawable/bg_gradient_black_white"
                app:layout_constraintStart_toStartOf="parent" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_list_music"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="@dimen/_12sdp"
                android:visibility="gone"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_list_record"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="@dimen/_12sdp"
                android:visibility="gone"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

            <LinearLayout
                android:id="@+id/ll_no_data"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableTop="@mipmap/image_no_data"
                    android:fontFamily="@font/sen_regular"
                    android:text="@string/no_data_record"
                    android:textColor="@color/black"
                    android:textSize="13sp" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/btn_go_to_piano"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_13sdp"
                    android:background="@drawable/bg_purple_r10"
                    android:clickable="true"
                    android:focusable="true"
                    android:fontFamily="@font/sen_medium"
                    android:paddingHorizontal="@dimen/_25sdp"
                    android:paddingVertical="@dimen/_10sdp"
                    android:text="@string/open_piano"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="13sp" />
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>