<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_color_main"
    tools:context=".ui.activities.ThemePianoActivity">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/image_background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="58dp" />

    <LinearLayout
        android:id="@+id/ll_button_top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_5sdp"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/btn_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_click"
            android:contentDescription="@string/back"
            android:src="@drawable/ic_back" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_title"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:fontFamily="@font/sen_bold"
            android:gravity="center"
            android:text="@string/theme"
            android:textColor="@color/white"
            android:textSize="22sp" />

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/btn_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_click"
            android:contentDescription="@string/save"
            android:src="@drawable/ic_tick" />
    </LinearLayout>

    <com.tbuonomo.viewpagerdotsindicator.DotsIndicator
        android:id="@+id/dot_indicator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_15sdp"
        app:dotsColor="@color/color_purple"
        app:dotsCornerRadius="@dimen/_4sdp"
        app:dotsSize="@dimen/_7sdp"
        app:dotsSpacing="@dimen/_4sdp"
        app:dotsWidthFactor="3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:selectedDotColor="@color/color_purple" />

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/view_page_theme"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginBottom="@dimen/_20sdp"
        android:paddingHorizontal="@dimen/_130sdp"
        app:layout_constraintBottom_toTopOf="@id/dot_indicator"
        app:layout_constraintTop_toBottomOf="@id/ll_button_top" />

</androidx.constraintlayout.widget.ConstraintLayout>